--- a/model-training-scripts/Other scripts.ipynb
+++ b/model-training-scripts/Other scripts.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "77d83788",
    "metadata": {},
    "outputs": [
@@ -295,6 +295,384 @@
     "win_df = pd.DataFrame(rows)\n",
     "win_df.to_csv(DATA_ROOT/\"Segmentation_windows.csv\", index=False)\n",
     "print(\"Wrote\", len(win_df), \"windows to Segmentation_windows.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b2d58dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_25621/594032138.py:139: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  infer_model = torch.load(CKPT_FILE, map_location=DEVICE)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "► Using device: mps\n",
+      "Loading model from kp_pose_quality_windows_ex.pt...\n",
+      "✅ Model loaded.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1745030852.291959  946755 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n",
+      "W0000 00:00:1745030852.353390 1014573 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1745030852.375076 1014585 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imports (assuming previous imports are still valid)\n",
+    "import os\n",
+    "import cv2\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "import mediapipe as mp\n",
+    "from collections import deque # Use deque for efficient buffer\n",
+    "from pathlib import Path\n",
+    "import pandas as pd # Needed for KeypointWindowDataset if re-defining\n",
+    "import torch.nn as nn # Needed for model classes if re-defining\n",
+    "\n",
+    "# --- Re-include necessary definitions if running standalone ---\n",
+    "# 1. Paths & device (adjust if needed)\n",
+    "SCRIPT_DIR    = Path().resolve()\n",
+    "DATA_ROOT     = SCRIPT_DIR/\"Data-REHAB24-6\" # Make sure this path is correct\n",
+    "\n",
+    "DEVICE = (\n",
+    "    torch.device(\"mps\") if torch.backends.mps.is_available() else\n",
+    "    torch.device(\"cuda\") if torch.cuda.is_available() else\n",
+    "    torch.device(\"cpu\")\n",
+    ")\n",
+    "print(\"► Using device:\", DEVICE)\n",
+    "\n",
+    "# 2. Joint names & count\n",
+    "PoseLandmark = mp.solutions.pose.PoseLandmark\n",
+    "JOINT_NAMES = [lm.name for lm in PoseLandmark]\n",
+    "N_JOINTS    = len(JOINT_NAMES)  # should be 33\n",
+    "\n",
+    "# 3. Exercises (Ex1…Ex6)\n",
+    "NUM_EXERCISES = 6\n",
+    "CKPT_FILE     = \"kp_pose_quality_windows_ex.pt\" # Check if this file exists\n",
+    "\n",
+    "# --- MODIFIED: Define the list of joints the error head predicts ---\n",
+    "# Make sure this EXACT order matches how the model was trained (generate_windows.py)\n",
+    "ERR_JOINTS   = [\n",
+    "  \"LEFT_ELBOW\",\"RIGHT_ELBOW\",\n",
+    "  \"LEFT_SHOULDER\",\"RIGHT_SHOULDER\",\n",
+    "  \"LEFT_HIP\",\"RIGHT_HIP\",\n",
+    "  \"LEFT_KNEE\",\"RIGHT_KNEE\",\n",
+    "  \"SPINE\",\"HEAD\",\n",
+    "]\n",
+    "N_ERR = len(ERR_JOINTS)\n",
+    "if N_ERR != 10:\n",
+    "    print(f\"Warning: N_ERR is {N_ERR}, but expected 10 based on comment. Ensure ERR_JOINTS is correct.\")\n",
+    "ERR_COLS = [f\"err_{i}\" for i in range(N_ERR)] # Used in training data prep, not directly here\n",
+    "\n",
+    "# 5. Model definitions (Using the ORIGINAL definition from training)\n",
+    "class KeypointEncoder(nn.Module):\n",
+    "    # --- Restored ORIGINAL definition ---\n",
+    "    def __init__(self, in_dim:int, embed:int=512):\n",
+    "        super().__init__()\n",
+    "        self.conv1 = nn.Conv1d(in_dim, 128, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv1d(128, embed, kernel_size=3, padding=1)\n",
+    "        self.pool  = nn.AdaptiveAvgPool1d(1)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        # x: (B, D); treat as (B, D, 1) for Conv1d\n",
+    "        # This encoder is designed to process features of a SINGLE frame (B, D)\n",
+    "        if x.dim() == 2:\n",
+    "            x = x.unsqueeze(2)                 # → (B, D, 1)\n",
+    "        x = F.relu(self.conv1(x))\n",
+    "        x = F.relu(self.conv2(x))\n",
+    "        return self.pool(x).squeeze(-1)    # → (B, embed)\n",
+    "\n",
+    "\n",
+    "class PoseQualityNetKP(nn.Module):\n",
+    "    # --- Keep the PoseQualityNetKP class definition as in the original code ---\n",
+    "    def __init__(self,\n",
+    "                 in_dim: int, # Should be 99 (33*3)\n",
+    "                 num_ex: int,\n",
+    "                 hidden: int = 256,\n",
+    "                 ex_emb: int = 64,\n",
+    "                 embed: int = 512): # Added embed dim to match encoder\n",
+    "        super().__init__()\n",
+    "        # keypoint feature extractor (Uses the restored original encoder)\n",
+    "        self.encoder = KeypointEncoder(in_dim, embed=embed)\n",
+    "\n",
+    "        # sequence model\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            input_size=embed, # Use embed dim here\n",
+    "            hidden_size=hidden,\n",
+    "            num_layers=2,\n",
+    "            batch_first=True,\n",
+    "            bidirectional=True\n",
+    "        )\n",
+    "        feat_dim = hidden * 2\n",
+    "\n",
+    "        # exercise embedding MLP\n",
+    "        self.ex_emb = nn.Sequential(\n",
+    "            nn.Linear(num_ex, ex_emb),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(ex_emb, ex_emb)\n",
+    "        )\n",
+    "\n",
+    "        # final heads\n",
+    "        self.cls_head = nn.Linear(feat_dim + ex_emb, 2) # 2 classes: incorrect, correct\n",
+    "        self.err_head = nn.Linear(feat_dim + ex_emb, N_ERR) # Predicts N_ERR error values\n",
+    "\n",
+    "    def forward(self,\n",
+    "                seq:     torch.Tensor,  # (B, T, D) where D=99\n",
+    "                ex_1hot: torch.Tensor   # (B, num_ex)\n",
+    "    ) -> tuple[torch.Tensor, torch.Tensor]:\n",
+    "        # 1) keypoint → sequence feats\n",
+    "        # encode each frame\n",
+    "        B, T, D = seq.shape # Now this should work\n",
+    "        # Process sequence frame by frame using the encoder\n",
+    "        frame_embeddings = []\n",
+    "        for t in range(T):\n",
+    "            frame_data = seq[:, t, :] # Get data for frame t: (B, D)\n",
+    "            frame_embedding = self.encoder(frame_data) # Output: (B, embed)\n",
+    "            frame_embeddings.append(frame_embedding)\n",
+    "\n",
+    "        feats = torch.stack(frame_embeddings, dim=1) # (B, T, embed)\n",
+    "\n",
+    "        # 2) sequence model (LSTM)\n",
+    "        out, _ = self.lstm(feats)                # (B, T, 2*hidden)\n",
+    "        # Aggregate LSTM outputs (e.g., mean pooling over time)\n",
+    "        g = out.mean(dim=1)                      # (B, 2*hidden)\n",
+    "\n",
+    "        # 3) exercise embed\n",
+    "        ex_e = self.ex_emb(ex_1hot)              # (B, ex_emb)\n",
+    "\n",
+    "        # 4) concat and heads\n",
+    "        h = torch.cat([g, ex_e], dim=1)          # (B, feat_dim + ex_emb)\n",
+    "        logits = self.cls_head(h)                # (B, 2)\n",
+    "        err_hat = self.err_head(h)               # (B, N_ERR)\n",
+    "\n",
+    "        return logits, err_hat\n",
+    "# --- End of re-included definitions ---\n",
+    "\n",
+    "\n",
+    "# Load model\n",
+    "if not Path(CKPT_FILE).exists():\n",
+    "    print(f\"Error: Checkpoint file not found at {CKPT_FILE}\")\n",
+    "    exit()\n",
+    "\n",
+    "print(f\"Loading model from {CKPT_FILE}...\")\n",
+    "infer_model = torch.load(CKPT_FILE, map_location=DEVICE)\n",
+    "infer_model.eval()\n",
+    "print(\"✅ Model loaded.\")\n",
+    "\n",
+    "# Exercise map\n",
+    "EXERCISE_MAP = {\n",
+    "    1: \"Arm abduction\",\n",
+    "    2: \"Arm VW\",\n",
+    "    3: \"Push-ups\",\n",
+    "    4: \"Leg abduction\",\n",
+    "    5: \"Leg lunge\",\n",
+    "    6: \"Squats\"\n",
+    "}\n",
+    "NUM_EXERCISES = len(EXERCISE_MAP) # Ensure consistency\n",
+    "\n",
+    "# Ask user for exercise ID\n",
+    "while True:\n",
+    "    try:\n",
+    "        exercise_id_str = input(f\"Enter the exercise ID you're performing (1-{len(EXERCISE_MAP)}): \")\n",
+    "        exercise_id = int(exercise_id_str)\n",
+    "        if 1 <= exercise_id <= len(EXERCISE_MAP):\n",
+    "            exercise_name = EXERCISE_MAP[exercise_id]\n",
+    "            break\n",
+    "        else:\n",
+    "            print(f\"Invalid ID. Please enter a number between 1 and {len(EXERCISE_MAP)}.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input. Please enter a number.\")\n",
+    "\n",
+    "# MediaPipe Pose Setup\n",
+    "mp_pose = mp.solutions.pose\n",
+    "pose = mp_pose.Pose(\n",
+    "    static_image_mode=False,\n",
+    "    model_complexity=2, # Match training\n",
+    "    enable_segmentation=False,\n",
+    "    min_detection_confidence=0.5,\n",
+    "    min_tracking_confidence=0.5\n",
+    ")\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "\n",
+    "# Keypoints extraction function (using world landmarks)\n",
+    "def extract_keypoints(frame):\n",
+    "    img_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    img_rgb.flags.writeable = False\n",
+    "    result = pose.process(img_rgb)\n",
+    "    img_rgb.flags.writeable = True\n",
+    "\n",
+    "    keypoints = None\n",
+    "    landmarks_for_drawing = None\n",
+    "\n",
+    "    if result.pose_world_landmarks:\n",
+    "        world_landmarks = result.pose_world_landmarks.landmark\n",
+    "        # Using world landmarks for model input - consistent with potential training setup\n",
+    "        keypoints = np.array([(lm.x, lm.y, lm.z) for lm in world_landmarks], dtype=np.float32)\n",
+    "\n",
+    "    if result.pose_landmarks:\n",
+    "         # Using image landmarks just for drawing\n",
+    "         landmarks_for_drawing = result.pose_landmarks\n",
+    "\n",
+    "    return keypoints, landmarks_for_drawing\n",
+    "\n",
+    "# Inference parameters\n",
+    "SEQUENCE_LENGTH = 16 # Match training window size\n",
+    "IN_DIM = N_JOINTS * 3 # 33 * 3 = 99\n",
+    "\n",
+    "# --- MODIFIED Inference Function ---\n",
+    "def infer_and_feedback(model, video_path, selected_ex_id, selected_ex_name):\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        print(f\"Error: Could not open video file {video_path}\")\n",
+    "        return\n",
+    "\n",
+    "    keypoints_buffer = deque(maxlen=SEQUENCE_LENGTH)\n",
+    "    feedback_status = \"Initializing...\" # Overall status (Correct/Incorrect/Collecting...)\n",
+    "    joint_feedback = [] # <-- MODIFIED: Store specific joint feedback messages\n",
+    "    predicted_class = -1 # -1: Initializing, 0: Incorrect, 1: Correct\n",
+    "    err_values = np.zeros(N_ERR) # Store last raw error values for analysis\n",
+    "\n",
+    "    while cap.isOpened():\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            print(\"End of video or cannot read frame.\")\n",
+    "            break\n",
+    "\n",
+    "        world_keypoints, image_landmarks_for_drawing = extract_keypoints(frame)\n",
+    "\n",
+    "        # Draw Image Landmarks if detected\n",
+    "        if image_landmarks_for_drawing:\n",
+    "            mp_drawing.draw_landmarks(\n",
+    "                frame,\n",
+    "                image_landmarks_for_drawing,\n",
+    "                mp_pose.POSE_CONNECTIONS,\n",
+    "                landmark_drawing_spec=mp_drawing.DrawingSpec(color=(245,117,66), thickness=2, circle_radius=2),\n",
+    "                connection_drawing_spec=mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2)\n",
+    "            )\n",
+    "\n",
+    "        # --- Model Inference Logic ---\n",
+    "        if world_keypoints is not None:\n",
+    "            keypoints_buffer.append(world_keypoints)\n",
+    "\n",
+    "            # Clear previous specific feedback before potentially generating new one\n",
+    "            joint_feedback = []\n",
+    "\n",
+    "            if len(keypoints_buffer) == SEQUENCE_LENGTH:\n",
+    "                # Prepare sequence\n",
+    "                keypoints_array = np.array(keypoints_buffer, dtype=np.float32) # (16, 33, 3)\n",
+    "                keypoints_flat = keypoints_array.reshape(SEQUENCE_LENGTH, -1) # (16, 99)\n",
+    "                seq = torch.tensor(keypoints_flat, dtype=torch.float32).unsqueeze(0).to(DEVICE) # (1, 16, 99)\n",
+    "\n",
+    "                # Prepare exercise ID\n",
+    "                ex_tensor = torch.tensor([selected_ex_id - 1], device=DEVICE)\n",
+    "                ex_1hot = F.one_hot(ex_tensor, num_classes=NUM_EXERCISES).float() # (1, NUM_EXERCISES)\n",
+    "\n",
+    "                # --- Run Inference ---\n",
+    "                model.eval()\n",
+    "                with torch.no_grad():\n",
+    "                    logits, err_hat = model(seq, ex_1hot)\n",
+    "                    # Class prediction (0: incorrect, 1: correct)\n",
+    "                    predicted_class = logits.argmax(1).item()\n",
+    "                    # Predicted errors (raw values from the model)\n",
+    "                    err_values = err_hat.squeeze().cpu().numpy() # Shape: (N_ERR,)\n",
+    "\n",
+    "                # --- Generate Feedback based on prediction ---\n",
+    "                if predicted_class == 1:\n",
+    "                    feedback_status = \"Correct\"\n",
+    "                    # No specific joint feedback needed if correct\n",
+    "                else: # predicted_class == 0 (Incorrect)\n",
+    "                    feedback_status = \"Incorrect\"\n",
+    "                    # --- MODIFICATION START: Analyze errors ---\n",
+    "                    # Calculate absolute errors to find the largest deviation\n",
+    "                    abs_errors = np.abs(err_values)\n",
+    "\n",
+    "                    # Find the indices of the top N largest absolute errors\n",
+    "                    # argsort gives indices from smallest to largest\n",
+    "                    sorted_indices = np.argsort(abs_errors)\n",
+    "\n",
+    "                    # Get the indices of the top 3 largest errors (last 3 in sorted list)\n",
+    "                    # You can change 3 to 1 if you only want the single most erroneous joint\n",
+    "                    top_n = 3\n",
+    "                    top_indices = sorted_indices[-top_n:]\n",
+    "\n",
+    "                    # Create feedback messages for the top errors\n",
+    "                    for idx in reversed(top_indices): # Show most prominent error first\n",
+    "                        # Ensure the index is valid (although it should be)\n",
+    "                        if 0 <= idx < len(ERR_JOINTS):\n",
+    "                           joint_name = ERR_JOINTS[idx]\n",
+    "                           # Add the specific joint feedback message\n",
+    "                           joint_feedback.append(f\"Correct your {joint_name}\")\n",
+    "                        else:\n",
+    "                            print(f\"Warning: Invalid error index {idx} encountered.\")\n",
+    "                    # --- MODIFICATION END ---\n",
+    "\n",
+    "            else: # Buffer not full yet\n",
+    "                feedback_status = f\"Collecting frames... {len(keypoints_buffer)}/{SEQUENCE_LENGTH}\"\n",
+    "                predicted_class = -1 # Reset prediction state while collecting\n",
+    "                # joint_feedback is already cleared at the start of the loop iteration\n",
+    "\n",
+    "        else: # No pose detected\n",
+    "            feedback_status = \"No pose detected\"\n",
+    "            keypoints_buffer.clear() # Clear buffer if pose is lost\n",
+    "            predicted_class = -1 # Reset prediction state\n",
+    "            joint_feedback = []  # Clear specific feedback\n",
+    "            err_values = np.zeros(N_ERR) # Reset errors\n",
+    "\n",
+    "        # --- Display Feedback on Frame ---\n",
+    "        # Display Exercise Name\n",
+    "        cv2.putText(frame, f\"Exercise: {selected_ex_name}\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.8, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "\n",
+    "        # Display Overall Status (Correct/Incorrect/Collecting...)\n",
+    "        status_color = (0, 255, 0) if predicted_class == 1 else ((0, 0, 255) if predicted_class == 0 else (255, 150, 0)) # Green/Red/Orange\n",
+    "        cv2.putText(frame, f\"Status: {feedback_status}\", (10, 60), cv2.FONT_HERSHEY_SIMPLEX, 1, status_color, 2, cv2.LINE_AA)\n",
+    "\n",
+    "        # --- MODIFIED: Display Specific Joint Feedback if Incorrect ---\n",
+    "        feedback_y_start = 90 # Starting Y position for joint feedback lines\n",
+    "        # Only display if the class is incorrect AND there are feedback messages\n",
+    "        if predicted_class == 0 and joint_feedback:\n",
+    "            for i, msg in enumerate(joint_feedback):\n",
+    "                # Display each specific correction suggestion\n",
+    "                cv2.putText(frame, msg, (10, feedback_y_start + i * 25), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 165, 255), 2) # Orange/Yellow text\n",
+    "\n",
+    "        # Show the frame\n",
+    "        cv2.imshow('Pose Estimation Feedback', frame)\n",
+    "\n",
+    "        # Exit condition\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "\n",
+    "    # Release resources\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "    pose.close()\n",
+    "\n",
+    "\n",
+    "# --- Main execution part ---\n",
+    "# Path to the video file (Make sure this exists)\n",
+    "# Example: Use Exercise 1 video for testing\n",
+    "VIDEO_PATH = \"Data-REHAB24-6/Videos/Ex1/PM_001-Camera17-30fps.mp4\"\n",
+    "# Or uncomment another exercise video\n",
+    "# VIDEO_PATH = \"Data-REHAB24-6/Videos/Ex2/PM_003-Camera17-30fps.mp4\"\n",
+    "\n",
+    "if not Path(VIDEO_PATH).exists():\n",
+    "     print(f\"Error: Video file not found at {VIDEO_PATH}\")\n",
+    "else:\n",
+    "    # Run the inference and feedback function\n",
+    "    infer_and_feedback(infer_model, VIDEO_PATH, exercise_id, exercise_name)"
    ]
   }
  ],
