--- a/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -317,8 +317,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e3fa0f98",
+   "execution_count": null,
+   "id": "fb2de2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,6 +434,148 @@
     "# win_df = pd.DataFrame(rows)\n",
     "# win_df.to_csv(DATA_ROOT/\"Segmentation_windows.csv\", index=False)\n",
     "# print(\"Wrote\", len(win_df), \"windows to Segmentation_windows.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3fa0f98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. helpers --------------------------------------------------\n",
+    "def angle_between(a,b,c):\n",
+    "    BA = a-b; BC = c-b\n",
+    "    cosθ = np.dot(BA,BC)/(np.linalg.norm(BA)*np.linalg.norm(BC))\n",
+    "    return math.degrees(math.acos(np.clip(cosθ,-1,1)))\n",
+    "\n",
+    "PoseLandmark = mp.solutions.pose.PoseLandmark\n",
+    "JOINT_TRIPLETS = {\n",
+    "    \"LEFT_ELBOW\":   (PoseLandmark.LEFT_SHOULDER.value,\n",
+    "                     PoseLandmark.LEFT_ELBOW.value,\n",
+    "                     PoseLandmark.LEFT_WRIST.value),\n",
+    "    \"RIGHT_ELBOW\":  (PoseLandmark.RIGHT_SHOULDER.value,\n",
+    "                     PoseLandmark.RIGHT_ELBOW.value,\n",
+    "                     PoseLandmark.RIGHT_WRIST.value),\n",
+    "    \"LEFT_SHOULDER\":  (PoseLandmark.LEFT_ELBOW.value,\n",
+    "                       PoseLandmark.LEFT_SHOULDER.value,\n",
+    "                       PoseLandmark.LEFT_HIP.value),\n",
+    "    \"RIGHT_SHOULDER\": (PoseLandmark.RIGHT_ELBOW.value,\n",
+    "                       PoseLandmark.RIGHT_SHOULDER.value,\n",
+    "                       PoseLandmark.RIGHT_HIP.value),\n",
+    "    \"LEFT_HIP\":   (PoseLandmark.LEFT_SHOULDER.value,\n",
+    "                   PoseLandmark.LEFT_HIP.value,\n",
+    "                   PoseLandmark.LEFT_KNEE.value),\n",
+    "    \"RIGHT_HIP\":  (PoseLandmark.RIGHT_SHOULDER.value,\n",
+    "                   PoseLandmark.RIGHT_HIP.value,\n",
+    "                   PoseLandmark.RIGHT_KNEE.value),\n",
+    "    \"LEFT_KNEE\":  (PoseLandmark.LEFT_HIP.value,\n",
+    "                  PoseLandmark.LEFT_KNEE.value,\n",
+    "                  PoseLandmark.LEFT_ANKLE.value),\n",
+    "    \"RIGHT_KNEE\": (PoseLandmark.RIGHT_HIP.value,\n",
+    "                  PoseLandmark.RIGHT_KNEE.value,\n",
+    "                  PoseLandmark.RIGHT_ANKLE.value),\n",
+    "    \"SPINE\": (\n",
+    "       PoseLandmark.LEFT_HIP.value,       \n",
+    "       PoseLandmark.LEFT_SHOULDER.value,   \n",
+    "       PoseLandmark.RIGHT_SHOULDER.value   \n",
+    "    ),\n",
+    "    \"HEAD\": (\n",
+    "       PoseLandmark.LEFT_SHOULDER.value,\n",
+    "       PoseLandmark.NOSE.value,\n",
+    "       PoseLandmark.RIGHT_SHOULDER.value\n",
+    "    ),\n",
+    "     \"LEFT_WRIST\":  (\n",
+    "        PoseLandmark.LEFT_ELBOW.value,\n",
+    "        PoseLandmark.LEFT_WRIST.value,\n",
+    "        PoseLandmark.LEFT_INDEX.value\n",
+    "    ),\n",
+    "    \"RIGHT_WRIST\": (\n",
+    "        PoseLandmark.RIGHT_ELBOW.value,\n",
+    "        PoseLandmark.RIGHT_WRIST.value,\n",
+    "        PoseLandmark.RIGHT_INDEX.value\n",
+    "    ),\n",
+    "    \"LEFT_ANKLE\":  (\n",
+    "        PoseLandmark.LEFT_KNEE.value,\n",
+    "        PoseLandmark.LEFT_ANKLE.value,\n",
+    "        PoseLandmark.LEFT_FOOT_INDEX.value\n",
+    "    ),\n",
+    "    \"RIGHT_ANKLE\": (\n",
+    "        PoseLandmark.RIGHT_KNEE.value,\n",
+    "        PoseLandmark.RIGHT_ANKLE.value,\n",
+    "        PoseLandmark.RIGHT_FOOT_INDEX.value\n",
+    "    ),\n",
+    "    \n",
+    "}\n",
+    "ERR_JOINTS = list(JOINT_TRIPLETS.keys())\n",
+    "N_ERR = len(ERR_JOINTS)  # 14\n",
+    "\n",
+    "# 2. load original metadata & keypoints -----------------------\n",
+    "DATA_ROOT    = Path(\"Data-REHAB24-6\")\n",
+    "KEYPT_ROOT   = DATA_ROOT/\"mp_keypoints\"\n",
+    "META_ORIG    = DATA_ROOT/\"Segmentation.xlsx\"\n",
+    "df           = pd.read_excel(META_ORIG, engine=\"openpyxl\")\n",
+    "df.columns   = df.columns.str.strip()\n",
+    "\n",
+    "# 3. compute ideal_angles on correct reps ----------------------\n",
+    "ideal_angles = {}\n",
+    "correct = df[df.correctness==1]\n",
+    "for ex in correct.exercise_id.unique():\n",
+    "    all_ang = {jn:[] for jn in ERR_JOINTS}\n",
+    "    for _,r in correct[correct.exercise_id==ex].iterrows():\n",
+    "        vid, f0, f1 = r.video_id, int(r.first_frame), int(r.last_frame)\n",
+    "        files = list((KEYPT_ROOT/f\"Ex{ex}\").glob(f\"{vid}-Camera17*-mp.npy\"))\n",
+    "        if not files: continue\n",
+    "        arr = np.load(files[0])\n",
+    "        seg = arr[f0:f1] if f1>f0 else arr[f0:]\n",
+    "        if len(seg)==0: continue\n",
+    "        mid = len(seg)//2\n",
+    "        frm = seg[mid]\n",
+    "        for jn in ERR_JOINTS:\n",
+    "            ia,ib,ic = JOINT_TRIPLETS[jn]\n",
+    "            ang = angle_between(frm[ia,:2],frm[ib,:2],frm[ic,:2])\n",
+    "            all_ang[jn].append(ang)\n",
+    "    # median\n",
+    "    ideal_angles[ex] = {jn:float(np.median(all_ang[jn])) for jn in all_ang if all_ang[jn]}\n",
+    "\n",
+    "# 4. slide windows & write rows --------------------------------\n",
+    "WINDOW, STRIDE = 16, 8\n",
+    "rows = []\n",
+    "for _,r in df.iterrows():\n",
+    "    vid, ex, f0, f1 = r.video_id, int(r.exercise_id), int(r.first_frame), int(r.last_frame)\n",
+    "    files = list((KEYPT_ROOT/f\"Ex{ex}\").glob(f\"{vid}-Camera17*-mp.npy\"))\n",
+    "    if not files: continue\n",
+    "    arr = np.load(files[0])                # (F,33,3)\n",
+    "    seg = arr[f0:f1] if f1>f0 else arr[f0:]\n",
+    "    if len(seg)<WINDOW: continue\n",
+    "\n",
+    "    # per-frame errors\n",
+    "    pf_err = {jn:[] for jn in ERR_JOINTS}\n",
+    "    for frm in seg:\n",
+    "        for jn in ERR_JOINTS:\n",
+    "            ia,ib,ic = JOINT_TRIPLETS[jn]\n",
+    "            ang = angle_between(frm[ia,:2],frm[ib,:2],frm[ic,:2])\n",
+    "            pf_err[jn].append(ang - ideal_angles[ex].get(jn,ang))\n",
+    "\n",
+    "    # slide\n",
+    "    for start in range(0, len(seg)-WINDOW+1, STRIDE):\n",
+    "        w = np.array([ pf_err[jn][start:start+WINDOW] for jn in ERR_JOINTS ])  # (10,WINDOW)\n",
+    "        mean_err = w.mean(axis=1)\n",
+    "        row = {\n",
+    "            \"video_id\":vid,\n",
+    "            \"exercise_id\":ex,\n",
+    "            \"repetition_number\":r.repetition_number,\n",
+    "            \"window_start\": f0+start,\n",
+    "            \"window_end\":   f0+start+WINDOW,\n",
+    "            \"correctness\":  r.correctness\n",
+    "        }\n",
+    "        for i,jn in enumerate(ERR_JOINTS):\n",
+    "            row[f\"err_{i}\"] = float(mean_err[i])\n",
+    "        rows.append(row)\n",
+    "\n",
+    "win_df = pd.DataFrame(rows)\n",
+    "win_df.to_csv(DATA_ROOT/\"Segmentation_windows.csv\", index=False)\n",
+    "print(\"Wrote\", len(win_df), \"windows to Segmentation_windows.csv\")\n"
    ]
   },
   {
