--- a/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "da0404a7",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1745139721.685371  378977 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
+      "I0000 00:00:1745140275.284093  378977 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
      ]
     },
     {
@@ -1752,8 +1752,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0000 00:00:1745139721.749473  384309 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745139721.770285  384313 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "W0000 00:00:1745140275.347545  394680 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1745140275.368858  394686 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     },
     {
@@ -1769,7 +1769,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_14139/1347022063.py:497: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_14139/2231009676.py:498: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  infer_model = torch.load(CKPT_FILE, map_location=DEVICE)\n"
      ]
     },
@@ -1854,7 +1854,7 @@
     "    for landmark in landmarks:\n",
     "        PUSHUP_REQUIRED_LANDMARKS.add(landmark.value)\n",
     "\n",
-    "VISIBILITY_THRESHOLD = 0.7\n",
+    "VISIBILITY_THRESHOLD = 0.8\n",
     "\n",
     "# --- Model Definitions ---\n",
     "# 5. Model definitions\n",
@@ -1949,7 +1949,7 @@
     "    mp_pose = mp.solutions.pose\n",
     "    pose = mp_pose.Pose(\n",
     "        static_image_mode=False, model_complexity=2, enable_segmentation=False,\n",
-    "        min_detection_confidence=0.5, min_tracking_confidence=0.5\n",
+    "        min_detection_confidence=0.8, min_tracking_confidence=0.8\n",
     "    )\n",
     "    mp_drawing = mp.solutions.drawing_utils\n",
     "    print(\"✅ MediaPipe Pose initialized.\")\n",
@@ -2015,7 +2015,8 @@
     "    suggestion = \"\"\n",
     "    suggestion_time = 0\n",
     "    SUGGESTION_DURATION_FRAMES = 3 * 30\n",
-    "    ERROR_WARNING_THRESHOLD = 2.0\n",
+    "\n",
+    "    ERROR_WARNING_THRESHOLD = 10 #Minimum error angle for joint warning display\n",
     "\n",
     "    FONT_FACE = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    FONT_SCALE_INFO = 1\n",
