--- a/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "03fe5a33",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
    "id": "522482d6",
    "metadata": {},
    "source": [
-    "## 3.1 Change the correctness of halp profile vidoes to incorrect \n",
+    "## 3.1 Change the correctness of half profile vidoes to incorrect \n",
     "\n",
     "This change is being made because the half-profile camera angle is considered insufficient or unreliable for accurately determining if the exercise repetition was performed correctly according to the established standards. Furthermore, for model inference, the intention is to use only the front-facing view. Therefore, this action serves as a data cleaning and preparation step to improve the quality and consistency of the data that will be used for subsequent analysis or modeling, ensuring that only reliably assessed repetitions are marked as 'correct'."
    ]
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e3fa0f98",
    "metadata": {},
    "outputs": [],
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "da0404a7",
    "metadata": {},
    "outputs": [
@@ -1732,7 +1732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1745140275.284093  378977 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
+      "I0000 00:00:1745192644.032706  612322 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
      ]
     },
     {
@@ -1752,8 +1752,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0000 00:00:1745140275.347545  394680 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745140275.368858  394686 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "W0000 00:00:1745192644.094704  617701 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1745192644.115260  617701 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     },
     {
@@ -1769,7 +1769,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_14139/2231009676.py:498: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_25397/3156858384.py:513: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  infer_model = torch.load(CKPT_FILE, map_location=DEVICE)\n"
      ]
     },
@@ -1777,6 +1777,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Webcam FPS: 30.0\n",
+      "Frame interval: 1 (processing every 1th frame)\n",
       "🚀 Starting feedback loop using: camera (Press 'q' to quit)\n",
       "\n",
       "'q' pressed. Exiting.\n",
@@ -2001,6 +2003,17 @@
     "        if not cap.isOpened():\n",
     "            print(f\"❌ Error: Could not open video source '{video_source}'\")\n",
     "            return\n",
+    "        # --- New: Set and verify webcam frame rate ---\n",
+    "        if isinstance(video_source, int):  # Webcam\n",
+    "            cap.set(cv2.CAP_PROP_FPS, 30)  # Attempt to set to 30 FPS\n",
+    "            webcam_fps = cap.get(cv2.CAP_PROP_FPS) or 30  # Fallback to 30 if not available\n",
+    "            print(f\"Webcam FPS: {webcam_fps}\")\n",
+    "            target_fps = 30\n",
+    "            frame_interval = max(1, round(webcam_fps / target_fps))  # Frames to skip\n",
+    "            print(f\"Frame interval: {frame_interval} (processing every {frame_interval}th frame)\")\n",
+    "        else:\n",
+    "            frame_interval = 1  # No skipping for video files (assumed 30 FPS)\n",
+    "        frame_count = 0  # Track frame count for skipping\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Error opening video source: {e}\")\n",
     "        return\n",
@@ -2020,11 +2033,11 @@
     "\n",
     "    FONT_FACE = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    FONT_SCALE_INFO = 1\n",
-    "    FONT_SCALE_FEEDBACK = 5\n",
+    "    FONT_SCALE_FEEDBACK = 1\n",
     "    FONT_SCALE_SUGGESTION = 1\n",
-    "    FONT_SCALE_WARNING = 2\n",
+    "    FONT_SCALE_WARNING = 1\n",
     "    FONT_THICKNESS = 2\n",
-    "    JOINT_WARNING_SPACING = 2\n",
+    "    JOINT_WARNING_SPACING = 30\n",
     "\n",
     "    window_name = 'Pose Estimation Feedback'\n",
     "    cv2.namedWindow(window_name, cv2.WINDOW_NORMAL)\n",
@@ -2035,6 +2048,10 @@
     "            print(\"\\nℹ️ End of video stream.\")\n",
     "            break\n",
     "\n",
+    "        frame_count += 1\n",
+    "        if frame_count % frame_interval != 0:\n",
+    "            continue  # Skip this frame\n",
+    "        \n",
     "        world_keypoints, image_landmarks_for_drawing, all_required_visible = extract_keypoints(frame, selected_ex_id)\n",
     "\n",
     "        if image_landmarks_for_drawing:\n",
