--- a/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "93a70e00",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "035cea14",
+   "metadata": {},
+   "source": [
+    "### 2. Original Dataset Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9c2322a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  exercise_id  Reps  Correct  Wrong  Frames Dir Seconds\n",
+      "0           1   178       90     88   27442   2   914.7\n",
+      "1           2   208       94    114   33641   2  1121.4\n",
+      "2           3   107       52     55   12054   1   401.8\n",
+      "3           4   210      120     90   18329   2   611.0\n",
+      "4           5   174       78     96   17608   2   586.9\n",
+      "5           6   195      134     61   19373   2   645.8\n",
+      "6       Total  1072      568    504  128447   –       –\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "ROOT = Path(\"Data-REHAB24-6\")           \n",
+    "segmentation = ROOT / \"Segmentation_original.xlsx\"  # Excel file from authors\n",
+    "FPS = 30\n",
+    "\n",
+    "# Read Excel file\n",
+    "df = pd.read_excel(segmentation)\n",
+    "\n",
+    "# Calculate the frame difference for each repetition (row)\n",
+    "df[\"frame_diff\"] = (df[\"last_frame\"] - df[\"first_frame\"] + 1)\n",
+    "\n",
+    "# One row = one repetition\n",
+    "summary = (\n",
+    "    df.groupby(\"exercise_id\")\n",
+    "      .agg(\n",
+    "          Reps=(\"exercise_id\", \"size\"),\n",
+    "          Correct=(\"correctness\", lambda x: (x == 1).sum()),\n",
+    "          Wrong=(\"correctness\", lambda x: (x == 0).sum()),\n",
+    "          Frames=(\"frame_diff\", \"sum\"),  # Sum the precomputed frame differences\n",
+    "          Dir=(\"cam17_orientation\", \"nunique\")  # Already correct\n",
+    "      )\n",
+    "      .reset_index()\n",
+    ")\n",
+    "\n",
+    "# Calculate totals\n",
+    "total_row = pd.DataFrame({\n",
+    "    \"exercise_id\": [\"Total\"],\n",
+    "    \"Reps\": [summary[\"Reps\"].sum()],\n",
+    "    \"Correct\": [summary[\"Correct\"].sum()],\n",
+    "    \"Wrong\": [summary[\"Wrong\"].sum()],\n",
+    "    \"Frames\": [summary[\"Frames\"].sum()],\n",
+    "    \"Dir\": [\"–\"],  # Direction doesn't apply to total\n",
+    "    \"Seconds\": [\"–\"]  # Seconds doesn't apply to total\n",
+    "})\n",
+    "\n",
+    "# Add Seconds column to the summary (before appending the total row)\n",
+    "summary[\"Seconds\"] = (summary.Frames / FPS).round(1)\n",
+    "\n",
+    "# Append the total row to the summary DataFrame\n",
+    "summary = pd.concat([summary, total_row], ignore_index=True)\n",
+    "\n",
+    "# Pretty-print\n",
+    "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebc37936",
+   "metadata": {},
+   "source": [
+    "The table presents a summary of exercise performance metrics from the REHAB24-6 dataset, which includes 1,072 repetitions of six physical rehabilitation exercises recorded at 30 FPS across 65 videos, focusing on Camera 17 data. The results are grouped by exercise_id (1 to 6, corresponding to Arm Abduction, Arm VW, Push-ups, Leg Abduction, Leg Lunge, and Squats, respectively). Exercise 1 (Arm Abduction) has 178 repetitions, with 90 correct and 88 incorrect, totaling 27,442 frames (914.7 seconds) and performed in 2 directions. Exercise 2 (Arm VW) shows 208 repetitions, with 94 correct and 114 incorrect, spanning 33,641 frames (1,121.4 seconds) across 2 directions. Exercise 3 (Push-ups) has 107 repetitions, with 52 correct and 55 incorrect, covering 12,054 frames (401.8 seconds) in 1 direction, reflecting its table-based setup. Exercise 4 (Leg Abduction) includes 210 repetitions, with 120 correct and 90 incorrect, totaling 18,329 frames (611.0 seconds) across 2 directions. Exercise 5 (Leg Lunge) has 174 repetitions, with 78 correct and 96 incorrect, spanning 17,608 frames (586.9 seconds) in 2 directions. Finally, Exercise 6 (Squats) shows 195 repetitions, with 134 correct and 61 incorrect, covering 19,373 frames (645.8 seconds) across 2 directions. Overall, the dataset totals 1,072 repetitions, with 568 correct and 504 incorrect, amounting to 128,447 frames, with direction and seconds not aggregated for the total. These results highlight the dataset's diversity in exercise types, correctness, and directional views, supporting its use for evaluating human pose estimation and exercise feedback systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99b0b559",
    "metadata": {},
    "source": [
@@ -43,6 +128,14 @@
     "\n",
     "This code uses MediaPipe Pose to extract keypoints from training videos. These keypoints are critical for model training as they represent the underlying body movements that the model will need to learn. Below is a breakdown of the process:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "713c2847",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1708,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "da0404a7",
    "metadata": {},
    "outputs": [
@@ -1785,6 +1878,17 @@
       "✅ Resources released.\n",
       "\n",
       "Script finished.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
